--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-light">
+   <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="#"><img class="logo" src="./public/logo.png" /></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler" style="color: white;" type="button" data-toggle="collapse"
+         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+         aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav mr-auto">
+         <ul class="navbar-nav" style="display: flex;align-items: center;">
             <li class="nav-item dropdown">
                <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -86,13 +87,14 @@
             <li class="nav-item">
                <form action="" class="search-form">
                   <input type="search" name="search" placeholder="Search">
-                  <button class="search-btn"><i class="far fa-check-circle"></i></button>
+                  <button class="search-btn text-muted" style="font-size: 15px;"><i
+                        class="fa-solid fa-magnifying-glass"></i></button>
                </form>
             </li>
-            <li class="nav-item dropdown">
-               <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+            <li class="nav-item dropdown user ">
+               <a class="text-white nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="far fa-user-circle"></i>
+                  <i class="fa-solid fa-circle-user"></i>
                </a>
                <div class="dropdown-menu " aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#">Action</a>
@@ -102,7 +104,7 @@
                </div>
             </li>
             <li class="nav-item">
-               <a href="#" class="text-white"><i class="far fa-credit-card"></i></a>
+               <a href="#" class="text-white"><i class="fa-solid fa-cart-shopping"></i></a>
             </li>
          </ul>
       </div>
