--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
    <title>ECom</title>
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script src="./events/scroll.js"></script>
-   <script src="./events/jquery-3.6.0.min.js"></script>
    <script src="https://kit.fontawesome.com/9a9548dfa7.js" crossorigin="anonymous"></script>
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -27,16 +26,28 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg">
+   <nav class="navbar navbar-expand">
       <a class="navbar-brand" href="#"><img class="logo" src="./public/logo.png" /></a>
       <!-- <button class="navbar-toggler" style="color: white;" type="button" data-toggle="collapse"
          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
          aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
       </button> -->
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div id="navbarSupportedContent" style="width:100%">
          <ul class="navbar-nav" style="display: flex;align-items: center;">
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown none-from768">
+               <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu
+               </a>
+               <div class="dropdown-menu dropdown-config" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something else here</a>
+               </div>
+            </li>
+            <li class="nav-item dropdown none-to768">
                <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Category
@@ -48,7 +59,7 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                </div>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown none-to768">
                <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Deals
@@ -60,7 +71,7 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                </div>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown none-to992">
                <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   What's new
@@ -72,7 +83,7 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                </div>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown none-to1200">
                <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Pickup & Delivery
@@ -84,14 +95,14 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                </div>
             </li>
-            <li class="nav-item">
+            <li class="nav-item " style="flex: 0 0 35%;">
                <form action="" class="search-form">
                   <input type="search" name="search" placeholder="Search">
                   <button class="search-btn text-muted" style="font-size: 15px;"><i
                         class="fa-solid fa-magnifying-glass"></i></button>
                </form>
             </li>
-            <li class="nav-item dropdown user ">
+            <li class="nav-item dropdown user none-to992">
                <a class="text-white nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="fa-solid fa-circle-user"></i>
