--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                </div>
             </li>
-            <li class="nav-item dropdown none-to992">
+            <li class="nav-item dropdown none-to1200">
                <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   What's new
@@ -83,7 +83,7 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                </div>
             </li>
-            <li class="nav-item dropdown none-to1200">
+            <li class="nav-item dropdown none-to992">
                <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Pickup & Delivery
@@ -95,8 +95,8 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                </div>
             </li>
-            <li class="nav-item " style="flex: 0 0 35%;">
-               <form action="" class="search-form">
+            <li class="nav-item search">
+               <form action="" class="search__form">
                   <input type="search" name="search" placeholder="Search">
                   <button class="search-btn text-muted" style="font-size: 15px;"><i
                         class="fa-solid fa-magnifying-glass"></i></button>
@@ -114,7 +114,7 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                </div>
             </li>
-            <li class="nav-item">
+            <li class="nav-item nav-item-last">
                <a href="#" class="text-white"><i class="fa-solid fa-cart-shopping"></i></a>
             </li>
          </ul>
